discussion/kv_engine/175099/175099_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52216: Remove rate limitations added for capella

Change-Id: I08895d746059b1a450320dd19fdeec5b64dea390

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-05-20 11:49:43.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-20 11:58:27.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46251/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/cbsasl/password_database_test.cc(141): error C2039: "getLimits": is not a member of "cb::sasl::pwdb::User" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46251/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17598/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_environment.cc:437:31: error: no member named "user" in namespace "cb::sasl::pwdb"; did you mean "User"? [clang-diagnostic-error]
        using cb::sasl::pwdb::user::Limits;
                              ^~~~
                              User
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/cbsasl/user.h:27:7: note: "User" declared here
class User {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_environment.cc:437:37: error: using declaration cannot refer to class member [clang-diagnostic-error]
        using cb::sasl::pwdb::user::Limits;
                                    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17598/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_environment.cc:437:31:
error: no member named "user" in namespace "cb::sasl::pwdb"; did you mean "User"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17598/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7207/ : FAILURE

Compile error at [2022-05-20T11:54:31.430Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/cbsasl/password_database_test.cc:141:20:
error: no member named "getLimits" in "cb::sasl::pwdb::User"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7207/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19367/ : FAILURE

Compile error at [2022-05-20T11:54:35.944Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/cbsasl/password_database_test.cc:141:20:
error: ?class cb::sasl::pwdb::User? has no member named ?getLimits?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19367/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19714/ : FAILURE

Compile error at [2022-05-20T11:56:03.270Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/cbsasl/password_database_test.cc:141:20:
error: ?class cb::sasl::pwdb::User? has no member named ?getLimits?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19714/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20385/ : FAILURE

Compile error at [2022-05-20T11:55:49.763Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/cbsasl/password_database_test.cc:141:20:
error: no member named "getLimits" in "cb::sasl::pwdb::User"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20385/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18573/ : FAILURE

Compile error at [2022-05-20T11:52:33.989Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/cbsasl/password_database_test.cc:141:20:
error: no member named "getLimits" in "cb::sasl::pwdb::User"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18573/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27768/ : FAILURE

Compile error at [2022-05-20T11:57:57.414Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/cbsasl/password_database_test.cc:141:20:
error: no member named "getLimits" in "cb::sasl::pwdb::User"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27768/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7309/ : FAILURE

Compile error at [2022-05-20T11:56:20.147Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/cbsasl/password_database_test.cc:141:20:
error: ?class cb::sasl::pwdb::User? has no member named ?getLimits?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7309/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16618/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38860/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
